<resources>
    <string name="app_name">Trabalho1</string>7

    /*LABLES*/
    <string name="ToggleButtonLable">I\'m toggle button</string>
    <string name="EditTextLable">I\'m Edit Text</string>
    <string name="dropdownLable">I\'m a dropdown to display an array</string>
    <string name="autocompleteLable">I\'m an autocompleteTextView</string>
    <string name="radio_btnLable">I\'m an radio button</string>


    /*BTN_TEXT*/
    <string name="autoCompleteHint">Select an country</string>
    <string name="btn_nextScreen">next screen</string>
    <string name="radio_btn">click-me</string>
    <string name="play_btn"> Play an oldie</string>


    <string name="settings_btn">Settings</string>


    /*RECYCLER_VIEW*/
    <string-array name="programing_langs">
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>Python</item>
        <item>React</item>
        <item>Typescript</item>
        <item>Ruby</item>
        <item>VisualBasics</item>
        <item>C#</item>
    </string-array>
    <string-array name="langs_description">
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>